syntax = "proto3";

package raft;

service Raft {
  rpc AppendEntries(AppendRequest) returns (AppendResponse);
  rpc RequestVote(VoteRequest) returns (VoteResponse);
}

message AppendRequest {
  string leaderId = 1;
  int32 term = 2;
  int32 prevLogIndex = 3;
  int32 prevLogTerm = 4;
  repeated LogEntry entries = 5;
  int32 leaderCommit = 6;
}

message AppendResponse {
  int32 term = 1;
  bool success = 2;
}

message VoteRequest {
  string candidateId = 1;
  int32 term = 2;
  int32 lastLogIndex = 3;
  int32 lastLogTerm = 4;
}

message VoteResponse {
  int32 term = 1;
  bool voteGranted = 2;
}

message LogEntry {
  int32 term = 1;
  string command = 2;
}
